# esp-wolfssl

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Kconfig  README.md  component.mk
examples/: README.md
examples/https_request/: CMakeLists.txt  sdkconfig.defaults
examples/https_request/main/: CMakeLists.txt  Kconfig.projbuild  https_request_example_main.c
examples/https_request/main/include/: time_sync.h
examples/wolfssl_client/: CMakeLists.txt  sdkconfig.defaults
examples/wolfssl_client/main/: CMakeLists.txt  Kconfig.projbuild  wolfssl_client_demo.c
include/: esp_wolfssl_stack.h
port/: esp_tls_wolfssl.c  esp_wolfssl_mem.c  esp_wolfssl_seed.c  user_settings.h
tools/ci/: build_examples.sh  build_exmaples.sh
