idf_component_register(
    COMPONENT_NAME
        "esp-wolfssl"

    SRCS
        # "wolfssl/src/bio.c"
        "wolfssl/src/conf.c"
        "wolfssl/src/crl.c"
        "wolfssl/src/dtls13.c"
        "wolfssl/src/dtls.c"
        "wolfssl/src/internal.c"
        "wolfssl/src/keys.c"
        "wolfssl/src/ocsp.c"
        "wolfssl/src/pk.c"
        "wolfssl/src/pk_ec.c"
        "wolfssl/src/pk_rsa.c"
        "wolfssl/src/quic.c"
        "wolfssl/src/sniffer.c"
        # "wolfssl/src/ssl_asn1.c"
        # "wolfssl/src/ssl_bn.c"
        "wolfssl/src/ssl.c"
        # "wolfssl/src/ssl_certman.c"
        # "wolfssl/src/ssl_crypto.c"
        # "wolfssl/src/ssl_load.c"
        # "wolfssl/src/ssl_misc.c"
        # "wolfssl/src/ssl_p7p12.c"
        # "wolfssl/src/ssl_sess.c"
        "wolfssl/src/tls13.c"
        "wolfssl/src/tls.c"
        "wolfssl/src/wolfio.c"
        # "wolfssl/src/x509.c"
        # "wolfssl/src/x509_str.c"

        "wolfssl/wolfcrypt/src/aes.c"
        "wolfssl/wolfcrypt/src/arc4.c"
        "wolfssl/wolfcrypt/src/ascon.c"
        "wolfssl/wolfcrypt/src/asm.c"
        "wolfssl/wolfcrypt/src/asn.c"
        "wolfssl/wolfcrypt/src/asn_orig.c"
        "wolfssl/wolfcrypt/src/async.c"
        "wolfssl/wolfcrypt/src/blake2b.c"
        "wolfssl/wolfcrypt/src/blake2s.c"
        "wolfssl/wolfcrypt/src/camellia.c"
        "wolfssl/wolfcrypt/src/chacha20_poly1305.c"
        "wolfssl/wolfcrypt/src/chacha.c"
        "wolfssl/wolfcrypt/src/cmac.c"
        "wolfssl/wolfcrypt/src/coding.c"
        "wolfssl/wolfcrypt/src/compress.c"
        "wolfssl/wolfcrypt/src/cpuid.c"
        "wolfssl/wolfcrypt/src/cryptocb.c"
        "wolfssl/wolfcrypt/src/curve25519.c"
        "wolfssl/wolfcrypt/src/curve448.c"
        "wolfssl/wolfcrypt/src/des3.c"
        "wolfssl/wolfcrypt/src/dh.c"
        "wolfssl/wolfcrypt/src/dilithium.c"
        "wolfssl/wolfcrypt/src/dsa.c"
        "wolfssl/wolfcrypt/src/ecc.c"
        "wolfssl/wolfcrypt/src/ecc_fp.c"
        "wolfssl/wolfcrypt/src/eccsi.c"
        "wolfssl/wolfcrypt/src/ed25519.c"
        "wolfssl/wolfcrypt/src/ed448.c"
        "wolfssl/wolfcrypt/src/error.c"
        "wolfssl/wolfcrypt/src/evp.c"
        "wolfssl/wolfcrypt/src/evp_pk.c"
        "wolfssl/wolfcrypt/src/ext_lms.c"
        "wolfssl/wolfcrypt/src/ext_mlkem.c"
        "wolfssl/wolfcrypt/src/ext_xmss.c"
        "wolfssl/wolfcrypt/src/falcon.c"
        "wolfssl/wolfcrypt/src/fe_448.c"
        "wolfssl/wolfcrypt/src/fe_low_mem.c"
        "wolfssl/wolfcrypt/src/fe_operations.c"
        "wolfssl/wolfcrypt/src/ge_448.c"
        "wolfssl/wolfcrypt/src/ge_low_mem.c"
        "wolfssl/wolfcrypt/src/ge_operations.c"
        "wolfssl/wolfcrypt/src/hash.c"
        "wolfssl/wolfcrypt/src/hmac.c"
        "wolfssl/wolfcrypt/src/hpke.c"
        "wolfssl/wolfcrypt/src/integer.c"
        "wolfssl/wolfcrypt/src/kdf.c"
        "wolfssl/wolfcrypt/src/logging.c"
        "wolfssl/wolfcrypt/src/md2.c"
        "wolfssl/wolfcrypt/src/md4.c"
        "wolfssl/wolfcrypt/src/md5.c"
        "wolfssl/wolfcrypt/src/memory.c"
        "wolfssl/wolfcrypt/src/misc.c"
        "wolfssl/wolfcrypt/src/pkcs12.c"
        "wolfssl/wolfcrypt/src/pkcs7.c"
        "wolfssl/wolfcrypt/src/poly1305.c"
        "wolfssl/wolfcrypt/src/pwdbased.c"
        "wolfssl/wolfcrypt/src/random.c"
        "wolfssl/wolfcrypt/src/rc2.c"
        "wolfssl/wolfcrypt/src/ripemd.c"
        "wolfssl/wolfcrypt/src/rng_bank.c"
        "wolfssl/wolfcrypt/src/rsa.c"
        "wolfssl/wolfcrypt/src/sakke.c"
        "wolfssl/wolfcrypt/src/sha256.c"
        "wolfssl/wolfcrypt/src/sha3.c"
        "wolfssl/wolfcrypt/src/sha512.c"
        "wolfssl/wolfcrypt/src/sha.c"
        "wolfssl/wolfcrypt/src/signature.c"
        "wolfssl/wolfcrypt/src/siphash.c"
        "wolfssl/wolfcrypt/src/sm2.c"
        "wolfssl/wolfcrypt/src/sm3.c"
        "wolfssl/wolfcrypt/src/sm4.c"
        "wolfssl/wolfcrypt/src/sphincs.c"
        "wolfssl/wolfcrypt/src/sp_int.c"
        "wolfssl/wolfcrypt/src/sp_sm2_c32.c"
        "wolfssl/wolfcrypt/src/srp.c"
        "wolfssl/wolfcrypt/src/tfm.c"
        "wolfssl/wolfcrypt/src/wc_dsp.c"
        "wolfssl/wolfcrypt/src/wc_encrypt.c"
        "wolfssl/wolfcrypt/src/wc_lms.c"
        "wolfssl/wolfcrypt/src/wc_lms_impl.c"
        "wolfssl/wolfcrypt/src/wc_mlkem.c"
        "wolfssl/wolfcrypt/src/wc_mlkem_poly.c"
        "wolfssl/wolfcrypt/src/wc_pkcs11.c"
        "wolfssl/wolfcrypt/src/wc_port.c"
        "wolfssl/wolfcrypt/src/wc_slhdsa.c"
        "wolfssl/wolfcrypt/src/wc_xmss.c"
        "wolfssl/wolfcrypt/src/wc_xmss_impl.c"
        "wolfssl/wolfcrypt/src/wolfentropy.c"
        "wolfssl/wolfcrypt/src/wolfevent.c"
        "wolfssl/wolfcrypt/src/wolfmath.c"

        "wolfssl/wolfcrypt/src/port/Espressif/esp32_aes.c"
        "wolfssl/wolfcrypt/src/port/Espressif/esp32_mp.c"
        "wolfssl/wolfcrypt/src/port/Espressif/esp32_sha.c"
        "wolfssl/wolfcrypt/src/port/Espressif/esp32_util.c"
        "wolfssl/wolfcrypt/src/port/Espressif/esp_sdk_mem_lib.c"
        "wolfssl/wolfcrypt/src/port/Espressif/esp_sdk_time_lib.c"
        "wolfssl/wolfcrypt/src/port/Espressif/esp_sdk_wifi_lib.c"

        "wolfssl/wolfcrypt/test/test.c"
        "wolfssl/wolfcrypt/benchmark/benchmark.c"

    INCLUDE_DIRS
        "${CMAKE_CURRENT_LIST_DIR}/port"
        "${CMAKE_CURRENT_SOURCE_DIR}"
        "${CMAKE_CURRENT_SOURCE_DIR}/wolfssl"
        "$ENV{IDF_PATH}/components/freertos/FreeRTOS-Kernel/include/freertos"

    PRIV_REQUIRES
        "lwip"
        "esp_driver_gptimer"
)

target_compile_definitions(${COMPONENT_LIB} PUBLIC WOLFSSL_USER_SETTINGS)

if(CONFIG_WOLFSSL_DEBUGGING)
    target_compile_definitions(${COMPONENT_LIB} PUBLIC DEBUG_WOLFSSL)
endif()
